packages/beff-core/tests/snapshots/report_error__tests__fail3.snap
---
source: packages/beff-core/tests/report_error.rs
expression: fail(from)
---
Error: ~~~
   ╭─[<unknown>:1:1]
   │
 3 │         "/hello":1
   │          ────┬───  
   │              ╰───── Not an object with method kind
───╯

