packages/beff-core/tests/snapshots/report_error__tests__fail6.snap
---
source: packages/beff-core/tests/report_error.rs
expression: fail(from)
---
Error: ~~~
   ╭─[<unknown>:1:1]
   │
 5 │     export default A
   │                    ┬  
   │                    ╰── Cannot find symbol 'A'
───╯

