packages/beff-core/tests/snapshots/report_error__tests__fail_path_not_start_dash.snap
---
source: packages/beff-core/tests/report_error.rs
expression: fail(from)
---
Error: ~~~
   ╭─[<unknown>:1:1]
   │
 3 │         "hello": {
   │         ───┬───  
   │            ╰───── Path must start with a dash
───╯

