packages/beff-core/tests/snapshots/report_error__tests__fail_tpl_rest.snap
---
source: packages/beff-core/tests/report_error.rs
expression: fail(from)
---
Error: ~~~
   ╭─[<unknown>:1:1]
   │
 3 │     type B = A[100]
   │                ─┬─  
   │                 ╰─── Invalid indexed access
───╯

